# CalculatorApp

./: CMakeLists.txt  README.md  calculator.cpp  calculator.h  historymanager.cpp  historymanager.h  main.cpp
qml/: CalcButton.qml  Main.qml
